--- a/.github/workflows/WorkflowDocker.yml
+++ b/.github/workflows/WorkflowDocker.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Workflow Docker
 
 on:
   push:
@@ -20,6 +20,6 @@ jobs:
         uses: docker/login-action@v3.3.0
         with:       
           username: 'mauropy01'       
-          password: ${{ SECRET }}
+          password: ${{ secrets.SECRET }}
         
 
